fix: better vertical align for labels

--- a/src/dialog/Dialog/Dialog.scss
+++ b/src/dialog/Dialog/Dialog.scss
@@ -154,7 +154,7 @@
     }
 
     &__label {
-        padding-top: 5px;
+        padding-top: 3px;
         display: flex;
         font-size: var(--g-text-body-2-font-size);
     }
